--- a/keyp/src/main/resources/application.properties
+++ b/keyp/src/main/resources/application.properties
@@ -1,1 +1,28 @@
+# Server and Application Configuration
 spring.application.name=keyp
+server.port=8086
+
+# SQL Server Datasource Configuration
+spring.datasource.url=jdbc:sqlserver://192.168.10.26:1433;databaseName=keyp;encrypt=true;trustServerCertificate=true;
+spring.datasource.username=sa
+spring.datasource.password=his123
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+# Hibernate / JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+spring.jpa.show-sql=true
+
+# Thymeleaf Setting
+spring.thymeleaf.cache=false
+
+# Spring Security Settings
+spring.security.user.name=admin
+spring.security.user.password=admin123
+
+# Logging
+logging.level.org.springframework=INFO
+logging.level.com.kay=DEBUG
+
+# Encryption
+encryption.master-key=local-dev-keyp-123456
