--- a/keyp/src/main/resources/application.properties
+++ b/keyp/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # Server and Application Configuration
 spring.application.name=keyp
-server.port=8084
+server.port=${PORT:8084}
 
 # SQL Server Datasource Configuration
-spring.datasource.url=jdbc:sqlserver://192.168.10.26:1433;databaseName=keyp;encrypt=true;trustServerCertificate=true;
-spring.datasource.username=sa
-spring.datasource.password=his123
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # Hibernate / JPA Configuration
@@ -16,14 +16,10 @@ spring.jpa.show-sql=true
 # Thymeleaf Setting
 spring.thymeleaf.cache=false
 
-# Spring Security Settings
-spring.security.user.name=admin
-spring.security.user.password=admin123
-
 # Logging
 logging.level.org.springframework=INFO
 logging.level.com.kay=DEBUG
 
 # Encryption
-encryption.master-key=local-dev-keyp-123456
-ENCRYPTION_SECRET_KEY= Kr!$hN@RaJ@n!tHA
+encryption.master-key=${ENCRYPTION_MASTER_KEY}
+ENCRYPTION_SECRET_KEY=${ENCRYPTION_SECRET_KEY}
