Commit for all changes related to Application run failed

--- a/keyp/src/main/resources/application-prod.properties
+++ b/keyp/src/main/resources/application-prod.properties
@@ -10,7 +10,7 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # Hibernate / JPA Configuration
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 
 # Thymeleaf Setting
@@ -19,6 +19,5 @@ spring.thymeleaf.cache=false
 # Logging
 logging.level.org.springframework=INFO
 logging.level.com.kay=DEBUG
-
 # Encryption
 ENCRYPTION_SECRET_KEY=Kr!$hN@RaJ@n!tHA
